# PikaRust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/pikarust-app/: Cargo.toml
crates/pikarust-app/src/server/: http.rs  mod.rs  pool.rs  session.rs  ws.rs
crates/pikarust-bench/: Cargo.toml
crates/pikarust-bench/benches/: bitboard_bench.rs  movegen_bench.rs  nnue_bench.rs  search_bench.rs
crates/pikarust-bench/src/: main.rs
crates/pikarust-core/: Cargo.toml
crates/pikarust-core/src/: lib.rs
crates/pikarust-core/src/bitboard/: attacks.rs  bitboard.rs  magic.rs  magic_numbers.rs  mod.rs  tables.rs
crates/pikarust-core/src/engine/: core.rs  mod.rs  options.rs
crates/pikarust-core/src/nnue/: accumulator.rs  feature_transformer.rs  mod.rs  model.rs  network.rs  regression_tests.rs
crates/pikarust-core/src/nnue/features/: full_threats.rs  half_ka_v2_hm.rs  index_list.rs  mod.rs
crates/pikarust-core/src/nnue/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
crates/pikarust-core/src/position/: chase.rs  do_move.rs  fen.rs  legality.rs  mod.rs  movegen.rs  perft.rs  position.rs  rule_judge.rs  state.rs  zobrist.rs
crates/pikarust-core/src/search/: evaluate.rs  history.rs  history_update.rs  iterdeep.rs  mod.rs  movepick.rs  qsearch.rs  score.rs  search.rs  thread.rs  time.rs  tt.rs
crates/pikarust-core/src/types/: color.rs  mod.rs  moves.rs  piece.rs  square.rs  value.rs
crates/pikarust-core/tests/: nnue_integration.rs  threat_bug_b_repro.rs  threat_dirty_completeness.rs  threat_incremental_bench7.rs  threat_incremental_search_sim.rs
crates/uci-rs/: Cargo.toml
crates/uci-rs/src/: command.rs  error.rs  lib.rs  parser.rs  response.rs
e2e_platform/: Cargo.toml
e2e_platform/src/: config.rs  error.rs  lib.rs  main.rs  report.rs  runner.rs
e2e_platform/src/cases/: cross_engine.rs  eval_equivalence.rs  mod.rs  search_basic.rs  self_play.rs  strength_gauntlet.rs  uci_compliance.rs
e2e_platform/src/checks/: preflight.rs
e2e_platform/src/harness/: engine_process.rs  mod.rs  uci_io.rs
e2e_platform/src/match_driver/: driver.rs  match_config.rs  mod.rs
e2e_platform/src/referee/: game_result.rs  game_state.rs  mod.rs
models/: LICENSE-NNUE  README.md  pikafish.nnue
pikarust-web/bridge/: Cargo.toml
pikarust-web/bridge/src/: main.rs
pikarust-web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pikarust-web/frontend/src/: App.tsx
pikarust-web/frontend/src/components/analysis/: AnalysisPanel.tsx
pikarust-web/frontend/src/components/board/: Board.tsx  BoardGrid.tsx  Piece.tsx  index.ts
pikarust-web/frontend/src/components/controls/: Controls.tsx
pikarust-web/frontend/src/components/history/: MoveHistory.tsx
pikarust-web/frontend/src/components/layout/: Layout.tsx
pikarust-web/frontend/src/components/ui/: Panel.tsx  StatusBar.tsx
pikarust-web/frontend/src/hooks/: useAnalysis.ts  useEngine.ts  useGame.ts
pikarust-web/frontend/src/lib/: fen.ts  moves.ts  types.ts
pikarust-web/frontend/src/styles/: index.css
scripts/: build-web.sh  run-bench.sh  run-e2e.sh  setup-pikafish.sh
