[package]
name = "pikarust-e2e"
description = "End-to-end testing platform for PikaRust Chinese chess engine"
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["PikaRust Team"]
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
pikarust-core = { path = "../crates/pikarust-core" }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
